--- a/views/detailProductPage.ejs
+++ b/views/detailProductPage.ejs
@@ -61,17 +61,19 @@
                 </div>
                 <div class="size-container">
                     <span class="size-header">size</span>
-                    <button>XS</button>
-                    <button>S</button>
-                    <button>M</button>
-                    <button>L</button>
-                    <button>XL</button>
-                    <select id="" name="size">
-                            <option value="xs">XS</option>
-                            <option value="s">S</option>
-                            <option value="m">M</option>
-                            <option value="l">L</option>
-                            <option value="xl">XL</option>
+                    <label for="xs">XS</label>
+                    <input value="" type="radio" name="xs" />
+                    <label for="s">S</label>
+                    <input value="" type="radio" name="s" />
+                    <label for="m">M</label>
+                    <input value="" type="radio" name="m" />
+                    <label for="l">L</label>
+                    <input value="" type="radio" name="l" />
+                    <label for="xl">XL</label>
+                    <input value="" type="radio" name="xl" />
+                    
+                            
+                          
                           </select>
                 </div>
 
