--- a/views/startPage.ejs
+++ b/views/startPage.ejs
@@ -3,7 +3,7 @@
     <%- include ("partial/header.ejs") %>
 
     <body>
-        <div class="container-fluid">
+        <div class="container-fluid p-0">
             <div class="row">
                 <div class="col-12" id="subscribebox">
                     subscribe for 10% off
@@ -16,7 +16,7 @@
 
 
 
-            <div class="welcome-container">
+            <div class="welcome">
                 <div class="welcome-img-one"></div>
                 <div class="welcome-img-two"></div>
 
