--- a/scss/_startPage.scss
+++ b/scss/_startPage.scss
@@ -23,12 +23,11 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
     background-color: black;
 
   }
 
-  .welcome-container {
+  .welcome {
 
     display: flex;
     position: relative;
@@ -51,6 +50,12 @@
       @include tablet {
         width: 50%;
 
+
+      }
+
+      @include desktop {
+        background-position: top;
+
       }
     }
 
@@ -69,9 +74,12 @@
         display: block;
 
       }
-    }
 
-    @include desktop {}
+      @include desktop {
+        background-position: top;
+
+      }
+    }
   }
 
   .gecko-info {
@@ -217,7 +225,6 @@
     flex-direction: column;
 
     .women {
-
       background-image: url('../public/assets/women_crewneck_black.jpeg');
       width: 100%;
       height: 800px;
@@ -245,6 +252,21 @@
 
       }
 
+
+    }
+
+    @include tablet {
+      width: 50%;
+      flex-direction: row;
+      display: block;
+      flex-wrap: nowrap;
+
+
+    }
+
+    @include desktop {
+      background-position: top;
+
     }
 
     .men {
@@ -255,22 +277,34 @@
       background-repeat: no-repeat;
       background-size: cover;
       position: relative;
+
+
+      .shop-men {
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 200px;
+        margin: 10px;
+        padding: 7px;
+        background-color: white;
+        border: none;
+        text-transform: uppercase;
+        font-weight: 400;
+        font-size: 60%;
+      }
+
+      
+    }
+    @include tablet {
+      width: 50%;
+
     }
 
-    .shop-men {
-      text-align: center;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 200px;
-      margin: 10px;
-      padding: 7px;
-      background-color: white;
-      border: none;
-      text-transform: uppercase;
-      font-weight: 400;
-      font-size: 60%;
+    @include desktop {
+      background-position: top;
+
     }
   }
 }
