--- a/views/startPage.ejs
+++ b/views/startPage.ejs
@@ -3,7 +3,7 @@
     <%- include ("partial/header.ejs") %>
 
     <body>
-        <div class="container-fluid p-0">
+        <div class="container-fluid-first p-0">
             <div class="row">
                 <div class="col-12" id="subscribebox">
                     subscribe for 10% off
@@ -33,7 +33,7 @@
 
 
         </div>
-        <div class="container">
+        <div class="container-fluid">
             <div class="new-arrival">
                 <p>new arrivals</p>
             </div>
@@ -82,15 +82,16 @@
                 </div>
                 <% }); %>
             </div>
-
-            <div class="category-img">
-                <div class="women">
-                    <a href="/women"><button class="shop-women">shop women</button></a>
+            <div class="shop-box">
+                <div class="category-img">
+                    <div class="women">
+                        <a href="/women"><button class="shop-women">shop women</button></a>
+                    </div>
                 </div>
-            </div>
-            <div class="category-img">
-                <div class="men">
-                    <a href="/men"><button class="shop-men">shop men</button></a>
+                <div class="category-img">
+                    <div class="men">
+                        <a href="/men"><button class="shop-men">shop men</button></a>
+                    </div>
                 </div>
             </div>
 
