--- a/scss/_startPage.scss
+++ b/scss/_startPage.scss
@@ -2,7 +2,7 @@
   font-family: 'Spartan', sans-serif;
 
 
-  .container-fluid {
+  .container-fluid-first {
     #subscribebox {
       background-color: #7f8375;
       color: white;
@@ -13,6 +13,10 @@
       text-transform: uppercase;
     }
 
+  }
+
+  .container-fluid {
+    max-width: 1250px;
   }
 
 
@@ -167,6 +171,14 @@
         width: 45vw;
         margin-right: 20px;
 
+        @include tablet {
+          width: 20vw;
+        }
+    
+        @include desktop {
+          
+        }
+
 
         img {
 
@@ -217,22 +229,35 @@
 
   }
 
+  .shop-box {
+    display: flex;
+    flex-direction: column;
 
+    @include tablet {
+      flex-direction: row;
+    }
+
+    @include desktop {
+      background-position: top;
+    }
 
   .category-img {
     display: flex;
+    width: 100;
     align-items: center;
     flex-direction: column;
+    position: relative;
+    margin: 10px;
 
     .women {
       background-image: url('../public/assets/women_crewneck_black.jpeg');
+      display: flex;
       width: 100%;
       height: 800px;
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
       margin: 20px 0px 20px 0px;
-      position: relative;
       z-index: 1;
 
       .shop-women {
@@ -251,17 +276,12 @@
         font-size: 60%;
 
       }
-
-
     }
 
     @include tablet {
       width: 50%;
       flex-direction: row;
-      display: block;
-      flex-wrap: nowrap;
-
-
+      
     }
 
     @include desktop {
@@ -271,12 +291,13 @@
 
     .men {
       background-image: url('../public/assets/men_tshirt_green.jpeg');
+      display: flex;
       width: 100%;
       height: 800px;
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-      position: relative;
+      // position: relative;
 
 
       .shop-men {
@@ -294,17 +315,17 @@
         font-weight: 400;
         font-size: 60%;
       }
-
       
     }
     @include tablet {
       width: 50%;
+      flex-direction: row;
 
     }
 
     @include desktop {
       background-position: top;
-
     }
   }
+}
 }
