--- a/views/detailProductPage.ejs
+++ b/views/detailProductPage.ejs
@@ -78,7 +78,7 @@
                     </div>
 
                     <div class="desktop-bag">
-                        <a href="/cart/<%=clickedProduct._id%>"><button>add to bag</button></a>
+                        <button type="submit">add to bag</button>
                     </div>
 
                     <div class="product-description">
@@ -104,7 +104,7 @@
                     </div>
                     <div class="buttons-about-bag-container">
                         <button class="choose-size">product info +</button>
-                        <a href="/cart/<%=clickedProduct._id%>"><button class="add-to-bag">add to bag</button></a>
+                        <button class="add-to-bag" type="submit">add to bag</button>
                     </div>
                 </div>
             </form>
