--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -17,12 +17,14 @@
             <%= product.size %>
     </li>
     <li>
+        amount:
             <%= product.amount %>
 
     </li>
     <span><%=user.cart.indexOf(product)%></span>
     <a href="/deleteCart/<%= user.cart.indexOf(product) %>">Delete</a>
     <br>
+    <a href="/reduceCart/<%= user.cart.indexOf(product) %>">minus</a>
     <hr>
     <br>
 
