--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -10,6 +10,22 @@
 body {
     font-family: 'Spartan', sans-serif;
     padding-bottom: 0;
+    
+
+    .container-fluid-first {
+        
+        #subscribebox {
+          background-color: #7f8375;
+          color: white;
+          text-align: center;
+          padding: 12px;
+          font-weight: 100;
+          font-size: 70%;
+          text-transform: uppercase;
+          
+        }
+    
+      }
 
     .nav-container {
         font-family: 'Spartan', sans-serif;
@@ -104,6 +120,7 @@ body {
         justify-content: space-between;
         z-index: 1000;
         margin: 10px 0 10px;
+        
 
         .burgerandsearch {
             display: flex;
