--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -29,7 +29,7 @@
 </div>
 
 <footer>
-  <div class="container-fluid myfooter">
+  <div class="container-fluid-myfooter">
     <div class="informationbox">
       <div class="col-sm-12">
         <div class="informationlist">
