--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -1,3 +1,10 @@
+<div class="container-fluid-first p-0">
+        <div class="row">
+            <div class="col-12" id="subscribebox">
+                subscribe for 10% off
+            </div>
+        </div>
+
 <div class="burger-container">
 
     <div class="burgerandsearch">
