--- a/scss/_startPage.scss
+++ b/scss/_startPage.scss
@@ -11,10 +11,11 @@
     position: absolute;
     opacity: 0.2;
     z-index: 2;
-    top: 0;
+    top: 12.5%;
     left: 0;
     width: 100%;
     background-color: black;
+    height: 100%;
 
   }
 
