--- a/public/main.css
+++ b/public/main.css
@@ -336,21 +336,52 @@ body {
         font-size: 70%;
         font-weight: 600;
         margin: 12px 0px 12px 0px; }
-  * .gecko-store .gecko-store-img {
-    background-image: url("../public/assets/geckostore.png");
-    width: 100%;
-    height: 500px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; }
-  * .gecko-store .gecko-title {
-    text-transform: uppercase;
-    font-weight: 200;
-    font-size: 150%; }
-  * .gecko-store .gecko-text {
-    text-align: center;
-    font-weight: 100;
-    font-size: 100%; }
+  * .gecko-store {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5%; }
+    @media (min-width: 820px) {
+      * .gecko-store {
+        flex-direction: row; } }
+    * .gecko-store .store-info {
+      flex-direction: column; }
+      @media (min-width: 820px) {
+        * .gecko-store .store-info {
+          flex-direction: row;
+          width: 50%;
+          margin-right: 2%; } }
+    * .gecko-store .gecko-store-img {
+      background-image: url("../public/assets/geckostore.png");
+      width: 100%;
+      height: 500px;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover; }
+      @media (min-width: 820px) {
+        * .gecko-store .gecko-store-img {
+          width: 50%;
+          margin-right: 0.5%; } }
+    * .gecko-store .gecko-title {
+      text-transform: uppercase;
+      font-weight: 700;
+      font-size: 200%;
+      margin-top: 10%;
+      margin-bottom: 10%;
+      text-align: center; }
+      @media (min-width: 820px) {
+        * .gecko-store .gecko-title {
+          text-align: left;
+          margin-left: 2%; } }
+    * .gecko-store .gecko-text {
+      text-align: center;
+      font-weight: 100;
+      font-size: 100%;
+      text-align: left;
+      margin: 2%;
+      margin-bottom: 10%; }
+      @media (min-width: 820px) {
+        * .gecko-store .gecko-text {
+          padding-top: 5%; } }
   * .shop-box {
     display: flex;
     flex-direction: column; }
