--- a/views/startPage.ejs
+++ b/views/startPage.ejs
@@ -20,8 +20,6 @@
                 </div>
             </div>
             <div class="opacity"></div>
-
-
         </div>
         <div class="container-fluid">
             <div class="new-arrival">
@@ -86,21 +84,21 @@
             </div>
 
             <div class="gecko-store">
-                <span class="gecko-title">gecko store</span>
-                <div class="gecko-store-img"></div>
-
-
-                <div class="gecko-text">
-                    GECKO STORE dolor sit amet, consectetur adipisicing elit. Aut nobis error quaerat provident, ipsam
-                    unde
-                    eaque est in praesentium, voluptatum nisi modi ut nesciunt, eos odio deleniti. Reprehenderit,
-                    asperiores
-                    voluptatem? Dolor sit amet consectetur adipisicing elit. Iure, libero iusto recusandae voluptatum
-                    dicta
-                    nulla unde veritatis error? Odio vero explicabo quia rem amet delectus sit aliquam eveniet
-                    dignissimos
-                    repellendus.
+                <div class="store-info">
+                    <div class="gecko-title">gecko store</div>
+                    <div class="gecko-text">
+                        GECKO STORE dolor sit amet, consectetur adipisicing elit. Aut nobis error quaerat provident, ipsam
+                        unde
+                        eaque est in praesentium, voluptatum nisi modi ut nesciunt, eos odio deleniti. Reprehenderit,
+                        asperiores
+                        voluptatem? Dolor sit amet consectetur adipisicing elit. Iure, libero iusto recusandae voluptatum
+                        dicta
+                        nulla unde veritatis error? Odio vero explicabo quia rem amet delectus sit aliquam eveniet
+                        dignissimos
+                        repellendus.
+                    </div>
                 </div>
+                <div class="gecko-store-img"></div>
             </div>
         </div>
         <%- include ("partial/tothetop.ejs") %>
