--- a/public/main.css
+++ b/public/main.css
@@ -950,16 +950,17 @@ body {
         border-color: #e1e1e1;
         text-transform: uppercase; }
 
+html {
+  scroll-behavior: smooth; }
+
 #back-to-top-btn {
   position: fixed;
   border: none;
   border-radius: 50%;
   background-color: #949988;
-  bottom: 20px;
   right: 20px;
   z-index: 1000;
   cursor: pointer;
-  scroll-behavior: smooth;
   bottom: 3vh;
   width: 30px;
   height: 30px;
