--- a/scss/_backToTop.scss
+++ b/scss/_backToTop.scss
@@ -1,17 +1,16 @@
+html {
+    scroll-behavior: smooth;
+}
 #back-to-top-btn {
-    // display: none;
     position: fixed;
     border: none;
     border-radius: 50%;
     background-color: #949988;
-    bottom: 20px;
     right: 20px;
     z-index: 1000;
     cursor: pointer;
-    scroll-behavior: smooth;
     bottom: 3vh;
     width: 30px;
     height: 30px;
     color: white;
-
 }
