removed cart.ejs

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -13,7 +13,7 @@
     <section id="checkout-body">
 
         <div class="header-container">
-            <span>shopping bag items (obs denna visar för tillfället wishlist)</span>
+            <span>shopping bag items</span>
         </div>
 
         <div class="all-products-container">
