--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -37,7 +37,7 @@
           <hr class="footerline">
           <ul>
             <li>About GECKO</li>
-            <li>Sign in</li>
+            <li class="footerlogin"><a href="/login">Sign in</a></li>
             <li>Customer service</li>
             <li>Careers</li>
             <li>Press</li>
