--- a/scss/_checkout.scss
+++ b/scss/_checkout.scss
@@ -6,12 +6,17 @@
     flex-direction: column;
     width: 90%;
     margin: 60px 5% 0 5%;
+
+    @include tablet {
+        width: 70%;
+        margin: 60px 15% 0 15%;
+    }
     
 
     .header-container {
         width: 100%;
-        border-bottom: 1px solid rgb(225, 225, 225);
         padding: 10px 0;
+        border-bottom: 1px solid rgb(225, 225, 225);
 
         span {
             text-transform: uppercase;
@@ -23,6 +28,7 @@
         display: flex;
         flex-direction: column;
 
+
         .product-container {
             width: 100%;
             display: flex;
@@ -30,7 +36,7 @@
             flex-wrap: nowrap;
             padding: 20px 0;
             border-bottom: 1px solid rgb(225, 225, 225);
-            font-size: 0.9rem;
+            font-size: 0.8rem;
     
             .image-container {
                 width: 30%;
@@ -39,6 +45,13 @@
                 img {
                     width: 90%;
                 }
+
+                @include tablet {
+                    width: 15%;
+                }
+                @include desktop {
+                    width: 10%;
+                }
             }
     
             .info-container {
@@ -46,29 +59,45 @@
                 display: flex;
                 flex-direction: column;
 
+                @include tablet {
+                    width: 65%;
+                }
+                @include desktop {
+                    width: 70%;
+                }
+
                 .container {
                     padding: 6px 0;
                     
                     span {
-                        margin-right: 25px;
+                        margin-right: 15px;
                     }
                 }
 
                 .title-container {
                     text-transform: uppercase;
                     padding: 0;
-                    font-size: 1rem;
+                    font-size: 0.8rem;
                 }
 
                 .price-container {
                     text-transform: uppercase;
                     padding: 0;
-                    margin-bottom: 30px;
-                    font-size: 1rem;
+                    margin-bottom: 15px;
+                    font-size: 0.8rem;
                 }
 
                 .quantity-container {
-                    margin-top: 20px;
+                    margin-top: 15px;
+
+                    a {
+                        color: black;
+                        font-weight: 500;
+                    }
+                    a:hover {
+                        text-decoration: none;
+                        font-weight: bold;
+                    }
                 }
             }
     
