--- a/views/startPage.ejs
+++ b/views/startPage.ejs
@@ -4,22 +4,22 @@
     <%- include ("partial/tothetop") %>
 
     <body>
-            <%- include ("partial/navbar.ejs") %>
-        
-            <div class="welcome">
-                <div class="welcome-img-one"></div>
-                <div class="welcome-img-two"></div>
+        <%- include ("partial/navbar.ejs") %>
 
-                <div class="gecko-info">
-                    <h1>gecko news</h1>
-                    <span>100% organic cotton</span>
+        <div class="welcome">
+            <div class="welcome-img-one"></div>
+            <div class="welcome-img-two"></div>
 
-                    <a href="/women"><button class="shop-women">shop women</button></a>
-                    <a href="/men"><button class="shop-men">shop men</button></a>
+            <div class="gecko-info">
+                <h1>gecko news</h1>
+                <span>100% organic cotton</span>
 
-                </div>
+                <a href="/women"><button class="shop-women">shop women</button></a>
+                <a href="/men"><button class="shop-men">shop men</button></a>
+
             </div>
-            <div class="opacity"></div>
+        </div>
+
         </div>
         <div class="container-fluid">
             <div class="new-arrival">
@@ -87,11 +87,13 @@
                 <div class="store-info">
                     <div class="gecko-title">gecko store</div>
                     <div class="gecko-text">
-                        GECKO STORE dolor sit amet, consectetur adipisicing elit. Aut nobis error quaerat provident, ipsam
+                        GECKO STORE dolor sit amet, consectetur adipisicing elit. Aut nobis error quaerat provident,
+                        ipsam
                         unde
                         eaque est in praesentium, voluptatum nisi modi ut nesciunt, eos odio deleniti. Reprehenderit,
                         asperiores
-                        voluptatem? Dolor sit amet consectetur adipisicing elit. Iure, libero iusto recusandae voluptatum
+                        voluptatem? Dolor sit amet consectetur adipisicing elit. Iure, libero iusto recusandae
+                        voluptatum
                         dicta
                         nulla unde veritatis error? Odio vero explicabo quia rem amet delectus sit aliquam eveniet
                         dignissimos
