--- a/public/main.css
+++ b/public/main.css
@@ -220,15 +220,6 @@ body {
   font-family: 'Spartan', sans-serif; }
   * .container-fluid {
     max-width: 1250px; }
-  * .opacity {
-    position: absolute;
-    opacity: 0.2;
-    z-index: 2;
-    top: 12.5%;
-    left: 0;
-    width: 100%;
-    background-color: black;
-    height: 100%; }
   * .welcome {
     display: flex;
     position: relative;
@@ -237,7 +228,7 @@ body {
     width: 100%;
     height: 100vh; }
     * .welcome .welcome-img-one {
-      background-image: url("../public/assets/men_hoodie_white.jpeg");
+      background-image: url("../public/assets/men_hoodie_white_opacity.jpg");
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -251,7 +242,7 @@ body {
         * .welcome .welcome-img-one {
           background-position: top; } }
     * .welcome .welcome-img-two {
-      background-image: url("../public/assets/women_hoodie_pink.jpeg");
+      background-image: url("../public/assets/women_hoodie_pink_opacity.jpg");
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
