--- a/public/main.css
+++ b/public/main.css
@@ -90,7 +90,7 @@ body {
   background-color: white;
   opacity: 60%;
   z-index: 998;
-  position: fixed;
+  position: relative;
   width: 100%;
   height: 100%; }
 
