--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -2,7 +2,7 @@
     background-color: white;
     opacity: 60%;
     z-index: 998;
-    position: fixed;
+    position: relative;
     width: 100%;
     height: 100%;
 }
@@ -10,22 +10,22 @@
 body {
     font-family: 'Spartan', sans-serif;
     padding-bottom: 0;
-    
+
 
     .container-fluid-first {
-        
+
         #subscribebox {
-          background-color: #7f8375;
-          color: white;
-          text-align: center;
-          padding: 12px;
-          font-weight: 100;
-          font-size: 70%;
-          text-transform: uppercase;
-          
+            background-color: #7f8375;
+            color: white;
+            text-align: center;
+            padding: 12px;
+            font-weight: 100;
+            font-size: 70%;
+            text-transform: uppercase;
+
         }
-    
-      }
+
+    }
 
     .nav-container {
         font-family: 'Spartan', sans-serif;
@@ -40,7 +40,7 @@ body {
         background-color: white;
         transition: 1s;
         margin-top: 60px;
-        
+
         .about,
         .sign-in,
         .men-women {
@@ -118,7 +118,7 @@ body {
         justify-content: space-between;
         z-index: 1000;
         margin: 10px 0 10px;
-        
+
 
         .burgerandsearch {
             display: flex;
@@ -127,6 +127,7 @@ body {
             .hamburger-button {
                 border: none;
                 background: white;
+
             }
 
             .search-icon {
