--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -43,13 +43,15 @@
                         <span><%= product.amount%></span>
                         <a href="/reduceCart/<%= user.cart.indexOf(product) %>">-</a> /
                         <a href="/increaseCart/<%= user.cart.indexOf(product) %>">+</a><br>
-                        <a href="/deleteCart/<%= user.cart.indexOf(product) %>">delete all</a>  
+                         
                     </div>
                 </div>
 
                 <div class="total-item-price-container">
-                    <span>X</span>
-                    <span><299 SEK></span>
+                    <span><a href="/deleteCart/<%= user.cart.indexOf(product) %>">X</a> </span>
+
+                    
+                    <span><%= (product.productId.price) * (product.amount) %> SEK</span>
                 </div>
             </div>
 
